--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 #Thymeleaf cache ?? ??
 spring.thymeleaf.cache = false
+#DataBase Connection
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+
+#JPA Settings
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
